<ui version="4.0" >
 <class>DisplayProperties</class>
 <widget class="QDialog" name="DisplayProperties" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>763</width>
    <height>399</height>
   </rect>
  </property>
  <property name="sizePolicy" >
   <sizepolicy vsizetype="Expanding" hsizetype="Preferred" >
    <horstretch>0</horstretch>
    <verstretch>0</verstretch>
   </sizepolicy>
  </property>
  <property name="windowTitle" >
   <string>Fonts &amp; Colours</string>
  </property>
  <property name="windowIcon" >
   <iconset>
    <normaloff>:/icons/fonts.png</normaloff>:/icons/fonts.png</iconset>
  </property>
  <layout class="QVBoxLayout" name="_3" >
   <property name="spacing" >
    <number>6</number>
   </property>
   <property name="margin" >
    <number>9</number>
   </property>
   <item>
    <layout class="QGridLayout" >
     <property name="margin" >
      <number>0</number>
     </property>
     <property name="spacing" >
      <number>12</number>
     </property>
     <item row="0" column="0" >
      <widget class="QFrame" name="frame" >
       <property name="sizePolicy" >
        <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="frameShape" >
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="frameShadow" >
        <enum>QFrame::Raised</enum>
       </property>
       <layout class="QVBoxLayout" >
        <property name="spacing" >
         <number>6</number>
        </property>
        <property name="margin" >
         <number>0</number>
        </property>
        <item>
         <layout class="QVBoxLayout" >
          <property name="spacing" >
           <number>7</number>
          </property>
          <property name="margin" >
           <number>0</number>
          </property>
          <item>
           <widget class="QWidget" native="1" name="modelArea" />
          </item>
          <item>
           <layout class="QGridLayout" >
            <property name="margin" >
             <number>0</number>
            </property>
            <property name="spacing" >
             <number>6</number>
            </property>
           </layout>
          </item>
          <item>
           <layout class="QVBoxLayout" name="verticalLayout_3" >
            <item>
             <widget class="QTabWidget" name="tabWidget" >
              <property name="sizePolicy" >
               <sizepolicy vsizetype="Expanding" hsizetype="Preferred" >
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
              </property>
              <property name="currentIndex" >
               <number>0</number>
              </property>
              <widget class="QWidget" name="tab" >
               <property name="geometry" >
                <rect>
                 <x>0</x>
                 <y>0</y>
                 <width>297</width>
                 <height>289</height>
                </rect>
               </property>
               <attribute name="title" >
                <string>Card</string>
               </attribute>
               <layout class="QVBoxLayout" name="verticalLayout" >
                <item>
                 <layout class="QHBoxLayout" name="horizontalLayout_2" >
                  <item>
                   <widget class="QLabel" name="label_3" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Preferred" hsizetype="Fixed" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                    <property name="text" >
                     <string>Card:</string>
                    </property>
                   </widget>
                  </item>
                  <item>
                   <widget class="QComboBox" name="cardList" />
                  </item>
                 </layout>
                </item>
                <item>
                 <widget class="Line" name="line" >
                  <property name="orientation" >
                   <enum>Qt::Horizontal</enum>
                  </property>
                 </widget>
                </item>
                <item>
                 <layout class="QGridLayout" name="_2" >
                  <property name="margin" >
                   <number>0</number>
                  </property>
                  <property name="spacing" >
                   <number>5</number>
                  </property>
                  <item row="0" column="0" >
                   <widget class="QLabel" name="label_6" >
                    <property name="text" >
                     <string>Question font</string>
                    </property>
                   </widget>
                  </item>
                  <item row="6" column="1" >
                   <widget class="QPushButton" name="answerColour" >
                    <property name="text" >
                     <string/>
                    </property>
                    <property name="autoDefault" >
                     <bool>false</bool>
                    </property>
                   </widget>
                  </item>
                  <item row="5" column="0" >
                   <widget class="QLabel" name="label_10" >
                    <property name="text" >
                     <string>Answer size</string>
                    </property>
                   </widget>
                  </item>
                  <item row="6" column="0" >
                   <widget class="QLabel" name="label_11" >
                    <property name="text" >
                     <string>Answer colour</string>
                    </property>
                   </widget>
                  </item>
                  <item row="4" column="0" >
                   <widget class="QLabel" name="label_9" >
                    <property name="text" >
                     <string>Answer font</string>
                    </property>
                   </widget>
                  </item>
                  <item row="4" column="1" >
                   <widget class="QFontComboBox" name="answerFont" />
                  </item>
                  <item row="3" column="0" >
                   <widget class="QLabel" name="label_4" >
                    <property name="text" >
                     <string>Question alignment</string>
                    </property>
                   </widget>
                  </item>
                  <item row="1" column="0" >
                   <widget class="QLabel" name="label_7" >
                    <property name="text" >
                     <string>Question size</string>
                    </property>
                   </widget>
                  </item>
                  <item row="1" column="1" >
                   <widget class="QSpinBox" name="questionSize" >
                    <property name="maximum" >
                     <number>300</number>
                    </property>
                   </widget>
                  </item>
                  <item row="0" column="1" >
                   <widget class="QFontComboBox" name="questionFont" />
                  </item>
                  <item row="2" column="1" >
                   <widget class="QPushButton" name="questionColour" >
                    <property name="text" >
                     <string/>
                    </property>
                    <property name="autoDefault" >
                     <bool>false</bool>
                    </property>
                   </widget>
                  </item>
                  <item row="5" column="1" >
                   <widget class="QSpinBox" name="answerSize" >
                    <property name="maximum" >
                     <number>300</number>
                    </property>
                   </widget>
                  </item>
                  <item row="2" column="0" >
                   <widget class="QLabel" name="label_8" >
                    <property name="text" >
                     <string>Question colour</string>
                    </property>
                   </widget>
                  </item>
                  <item row="7" column="0" >
                   <widget class="QLabel" name="label_12" >
                    <property name="text" >
                     <string>Answer alignment</string>
                    </property>
                   </widget>
                  </item>
                  <item row="3" column="1" >
                   <widget class="QComboBox" name="questionAlign" />
                  </item>
                  <item row="7" column="1" >
                   <widget class="QComboBox" name="answerAlign" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Preferred" hsizetype="Preferred" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                   </widget>
                  </item>
                  <item row="8" column="0" >
                   <spacer name="verticalSpacer" >
                    <property name="orientation" >
                     <enum>Qt::Vertical</enum>
                    </property>
                    <property name="sizeHint" stdset="0" >
                     <size>
                      <width>20</width>
                      <height>40</height>
                     </size>
                    </property>
                   </spacer>
                  </item>
                 </layout>
                </item>
               </layout>
              </widget>
              <widget class="QWidget" name="tab_2" >
               <property name="geometry" >
                <rect>
                 <x>0</x>
                 <y>0</y>
                 <width>297</width>
                 <height>437</height>
                </rect>
               </property>
               <attribute name="title" >
                <string>Fields</string>
               </attribute>
               <layout class="QVBoxLayout" name="verticalLayout_2" >
                <item>
                 <widget class="QListWidget" name="fieldList" >
                  <property name="sizePolicy" >
                   <sizepolicy vsizetype="MinimumExpanding" hsizetype="Preferred" >
                    <horstretch>0</horstretch>
                    <verstretch>0</verstretch>
                   </sizepolicy>
                  </property>
                  <property name="minimumSize" >
                   <size>
                    <width>0</width>
                    <height>60</height>
                   </size>
                  </property>
                 </widget>
                </item>
                <item>
                 <widget class="QLabel" name="label" >
                  <property name="text" >
                   <string> &lt;b>When quizzing/adding/editing&lt;/b></string>
                  </property>
                 </widget>
                </item>
                <item>
                 <layout class="QGridLayout" name="_4" >
                  <property name="margin" >
                   <number>0</number>
                  </property>
                  <property name="spacing" >
                   <number>5</number>
                  </property>
                  <item row="1" column="0" >
                   <widget class="QCheckBox" name="useSize" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                    <property name="minimumSize" >
                     <size>
                      <width>0</width>
                      <height>25</height>
                     </size>
                    </property>
                    <property name="text" >
                     <string>Use custom size</string>
                    </property>
                   </widget>
                  </item>
                  <item row="0" column="1" >
                   <widget class="QFontComboBox" name="fontFamily" >
                    <property name="minimumSize" >
                     <size>
                      <width>0</width>
                      <height>25</height>
                     </size>
                    </property>
                   </widget>
                  </item>
                  <item row="0" column="0" >
                   <widget class="QCheckBox" name="useFamily" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                    <property name="minimumSize" >
                     <size>
                      <width>0</width>
                      <height>25</height>
                     </size>
                    </property>
                    <property name="text" >
                     <string>Use custom font</string>
                    </property>
                   </widget>
                  </item>
                  <item row="1" column="1" >
                   <widget class="QSpinBox" name="fontSize" >
                    <property name="minimum" >
                     <number>5</number>
                    </property>
                    <property name="maximum" >
                     <number>300</number>
                    </property>
                   </widget>
                  </item>
                  <item row="2" column="0" >
                   <widget class="QCheckBox" name="useColour" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                    <property name="minimumSize" >
                     <size>
                      <width>0</width>
                      <height>25</height>
                     </size>
                    </property>
                    <property name="text" >
                     <string>Use custom colour</string>
                    </property>
                   </widget>
                  </item>
                  <item row="2" column="1" >
                   <widget class="QPushButton" name="fontColour" >
                    <property name="autoFillBackground" >
                     <bool>true</bool>
                    </property>
                    <property name="text" >
                     <string/>
                    </property>
                    <property name="autoDefault" >
                     <bool>false</bool>
                    </property>
                   </widget>
                  </item>
                 </layout>
                </item>
                <item>
                 <widget class="QLabel" name="label_2" >
                  <property name="text" >
                   <string> &lt;b>When adding/editing&lt;/b></string>
                  </property>
                 </widget>
                </item>
                <item>
                 <layout class="QGridLayout" name="_5" >
                  <property name="margin" >
                   <number>0</number>
                  </property>
                  <property name="spacing" >
                   <number>5</number>
                  </property>
                  <item row="1" column="1" >
                   <widget class="QSpinBox" name="fontSizeEdit" >
                    <property name="minimum" >
                     <number>5</number>
                    </property>
                    <property name="maximum" >
                     <number>300</number>
                    </property>
                   </widget>
                  </item>
                  <item row="1" column="0" >
                   <widget class="QCheckBox" name="useSizeEdit" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                    <property name="minimumSize" >
                     <size>
                      <width>0</width>
                      <height>25</height>
                     </size>
                    </property>
                    <property name="text" >
                     <string>Use custom size</string>
                    </property>
                   </widget>
                  </item>
                  <item row="0" column="1" >
                   <widget class="QFontComboBox" name="fontFamilyEdit" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                   </widget>
                  </item>
                  <item row="0" column="0" >
                   <widget class="QCheckBox" name="useFamilyEdit" >
                    <property name="sizePolicy" >
                     <sizepolicy vsizetype="Fixed" hsizetype="Minimum" >
                      <horstretch>0</horstretch>
                      <verstretch>0</verstretch>
                     </sizepolicy>
                    </property>
                    <property name="minimumSize" >
                     <size>
                      <width>0</width>
                      <height>25</height>
                     </size>
                    </property>
                    <property name="text" >
                     <string>Use custom font</string>
                    </property>
                   </widget>
                  </item>
                 </layout>
                </item>
                <item>
                 <spacer name="verticalSpacer_2" >
                  <property name="orientation" >
                   <enum>Qt::Vertical</enum>
                  </property>
                  <property name="sizeHint" stdset="0" >
                   <size>
                    <width>20</width>
                    <height>40</height>
                   </size>
                  </property>
                 </spacer>
                </item>
               </layout>
              </widget>
             </widget>
            </item>
            <item>
             <layout class="QHBoxLayout" name="horizontalLayout" >
              <item>
               <widget class="QPushButton" name="helpButton" >
                <property name="text" >
                 <string>Help</string>
                </property>
                <property name="autoDefault" >
                 <bool>false</bool>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QPushButton" name="preview" >
                <property name="text" >
                 <string>Show preview</string>
                </property>
                <property name="checkable" >
                 <bool>true</bool>
                </property>
                <property name="autoDefault" >
                 <bool>false</bool>
                </property>
               </widget>
              </item>
              <item>
               <widget class="QPushButton" name="closeButton" >
                <property name="text" >
                 <string>Close</string>
                </property>
               </widget>
              </item>
             </layout>
            </item>
           </layout>
          </item>
         </layout>
        </item>
       </layout>
      </widget>
     </item>
     <item row="0" column="1" >
      <widget class="QGroupBox" name="previewGroup" >
       <property name="title" >
        <string>Preview</string>
       </property>
       <layout class="QVBoxLayout" >
        <property name="spacing" >
         <number>6</number>
        </property>
        <property name="margin" >
         <number>6</number>
        </property>
        <item>
         <widget class="QTextEdit" name="question" >
          <property name="sizePolicy" >
           <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize" >
           <size>
            <width>400</width>
            <height>0</height>
           </size>
          </property>
          <property name="readOnly" >
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QTextEdit" name="answer" >
          <property name="sizePolicy" >
           <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="readOnly" >
           <bool>true</bool>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>question</tabstop>
  <tabstop>answer</tabstop>
 </tabstops>
 <resources>
  <include location="../icons.qrc" />
 </resources>
 <connections>
  <connection>
   <sender>closeButton</sender>
   <signal>clicked()</signal>
   <receiver>DisplayProperties</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>275</x>
     <y>522</y>
    </hint>
    <hint type="destinationlabel" >
     <x>325</x>
     <y>525</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
